fixed title overflow

--- a/style.css
+++ b/style.css
@@ -3,20 +3,22 @@
     --bg: #d5d0ca;
 }
 
-h1 {
-    font-family: lores-21-serif, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 80px;
-    margin:30px;
-}
-
 body {
     font-family: monospace;
     background-color: var(--bg);
     color: var(--text);
     margin: 30px;
     text-align: center;
+}
+
+h1 {
+    font-family: lores-21-serif, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: clamp(20px, 15vw, 80px);
+    margin:30px;
+    max-width:80vw;
+    overflow: scroll;
 }
 
 @media (prefers-color-scheme: dark) {
